k8s/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "2401061"

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kirana-stop-deployment
  namespace: "2401061"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kirana-stop

  template:
    metadata:
      labels:
        app: kirana-stop

    spec:
      imagePullSecrets:
        - name: nexus-secret

      containers:
        - name: kirana-stop
          image: 127.0.0.1:30085/2401061/kirana-stop:latest

          ports:
            - containerPort: 3000

          # -------------------------------
          # Environment Variables
          # -------------------------------
          resources:
            requests:
              cpu: "500m"
              memory: "512Mi"
            limits:
              cpu: "1"
              memory: "1Gi"
