k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kirana-stop-service
  namespace: 2401061
spec:
  selector:
    app: kirana-stop

  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000

  type: ClusterIP
