k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kirana-stop-ingress
  namespace: "2401061"
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: 2401061.imcc.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kirana-stop-service
                port:
                  number: 3000
